crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI001_PYI001.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- - kind:
      name: UnprefixedTypeParam
      body: "Name of private `TypeVar` must start with `_`"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 16
    fix: ~
    parent: ~
  - kind:
      name: UnprefixedTypeParam
      body: "Name of private `TypeVarTuple` must start with `_`"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 9
    end_location:
      row: 5
      column: 31
    fix: ~
    parent: ~
  - kind:
      name: UnprefixedTypeParam
      body: "Name of private `ParamSpec` must start with `_`"
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 4
    end_location:
      row: 7
      column: 18
    fix: ~
    parent: ~

