crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI003_PYI003.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI003.pyi:4:4: PYI003 Unrecognized sys.version_info check
  |
2 | from sys import platform, version_info
3 | 
4 | if sys.version_info[0.0] == 2: ...  # PYI003
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
5 | if sys.version_info[0j] == 2: ...  # PYI003
6 | if sys.version_info[0] == (2, 7): ...  # PYI003
  |

PYI003.pyi:5:4: PYI003 Unrecognized sys.version_info check
  |
4 | if sys.version_info[0.0] == 2: ...  # PYI003
5 | if sys.version_info[0j] == 2: ...  # PYI003
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
6 | if sys.version_info[0] == (2, 7): ...  # PYI003
7 | if sys.version_info[0] == '2': ...  # PYI003
  |

PYI003.pyi:6:4: PYI003 Unrecognized sys.version_info check
  |
4 | if sys.version_info[0.0] == 2: ...  # PYI003
5 | if sys.version_info[0j] == 2: ...  # PYI003
6 | if sys.version_info[0] == (2, 7): ...  # PYI003
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
7 | if sys.version_info[0] == '2': ...  # PYI003
8 | if sys.version_info[:2] == "lol": ...  # PYI003
  |

PYI003.pyi:7:4: PYI003 Unrecognized sys.version_info check
  |
5 | if sys.version_info[0j] == 2: ...  # PYI003
6 | if sys.version_info[0] == (2, 7): ...  # PYI003
7 | if sys.version_info[0] == '2': ...  # PYI003
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
8 | if sys.version_info[:2] == "lol": ...  # PYI003
9 | if sys.version_info[:2.0] >= (3, 9): ...  # PYI003
  |

PYI003.pyi:8:4: PYI003 Unrecognized sys.version_info check
   |
 6 | if sys.version_info[0] == (2, 7): ...  # PYI003
 7 | if sys.version_info[0] == '2': ...  # PYI003
 8 | if sys.version_info[:2] == "lol": ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
 9 | if sys.version_info[:2.0] >= (3, 9): ...  # PYI003
10 | if sys.version_info[:2j] >= (3, 9): ...  # PYI003
   |

PYI003.pyi:9:4: PYI003 Unrecognized sys.version_info check
   |
 7 | if sys.version_info[0] == '2': ...  # PYI003
 8 | if sys.version_info[:2] == "lol": ...  # PYI003
 9 | if sys.version_info[:2.0] >= (3, 9): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
10 | if sys.version_info[:2j] >= (3, 9): ...  # PYI003
11 | if sys.version_info[:, :] >= (2, 7): ...  # PYI003
   |

PYI003.pyi:10:4: PYI003 Unrecognized sys.version_info check
   |
 8 | if sys.version_info[:2] == "lol": ...  # PYI003
 9 | if sys.version_info[:2.0] >= (3, 9): ...  # PYI003
10 | if sys.version_info[:2j] >= (3, 9): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
11 | if sys.version_info[:, :] >= (2, 7): ...  # PYI003
12 | if sys.version_info < ('3', '0'): ...  # PYI003
   |

PYI003.pyi:11:4: PYI003 Unrecognized sys.version_info check
   |
 9 | if sys.version_info[:2.0] >= (3, 9): ...  # PYI003
10 | if sys.version_info[:2j] >= (3, 9): ...  # PYI003
11 | if sys.version_info[:, :] >= (2, 7): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
12 | if sys.version_info < ('3', '0'): ...  # PYI003
13 | if sys.version_info < [3, 0]: ...  # PYI003
   |

PYI003.pyi:12:4: PYI003 Unrecognized sys.version_info check
   |
10 | if sys.version_info[:2j] >= (3, 9): ...  # PYI003
11 | if sys.version_info[:, :] >= (2, 7): ...  # PYI003
12 | if sys.version_info < ('3', '0'): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
13 | if sys.version_info < [3, 0]: ...  # PYI003
14 | if sys.version_info[1:] >= (7, 11): ...  # PYI003
   |

PYI003.pyi:13:4: PYI003 Unrecognized sys.version_info check
   |
11 | if sys.version_info[:, :] >= (2, 7): ...  # PYI003
12 | if sys.version_info < ('3', '0'): ...  # PYI003
13 | if sys.version_info < [3, 0]: ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
14 | if sys.version_info[1:] >= (7, 11): ...  # PYI003
15 | if sys.version_info[0:2] >= (7, 11): ...  # PYI003
   |

PYI003.pyi:14:4: PYI003 Unrecognized sys.version_info check
   |
12 | if sys.version_info < ('3', '0'): ...  # PYI003
13 | if sys.version_info < [3, 0]: ...  # PYI003
14 | if sys.version_info[1:] >= (7, 11): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
15 | if sys.version_info[0:2] >= (7, 11): ...  # PYI003
16 | if sys.version_info[::-1] < (11, 7): ...  # PYI003
   |

PYI003.pyi:15:4: PYI003 Unrecognized sys.version_info check
   |
13 | if sys.version_info < [3, 0]: ...  # PYI003
14 | if sys.version_info[1:] >= (7, 11): ...  # PYI003
15 | if sys.version_info[0:2] >= (7, 11): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
16 | if sys.version_info[::-1] < (11, 7): ...  # PYI003
17 | if sys.version_info[:3] >= (2, 7): ...  # PYI003
   |

PYI003.pyi:16:4: PYI003 Unrecognized sys.version_info check
   |
14 | if sys.version_info[1:] >= (7, 11): ...  # PYI003
15 | if sys.version_info[0:2] >= (7, 11): ...  # PYI003
16 | if sys.version_info[::-1] < (11, 7): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
17 | if sys.version_info[:3] >= (2, 7): ...  # PYI003
   |

PYI003.pyi:17:4: PYI003 Unrecognized sys.version_info check
   |
15 | if sys.version_info[0:2] >= (7, 11): ...  # PYI003
16 | if sys.version_info[::-1] < (11, 7): ...  # PYI003
17 | if sys.version_info[:3] >= (2, 7): ...  # PYI003
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI003
   |


