crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI004_PYI004.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI004.pyi:4:4: PYI004 Version comparison must use only major and minor version
  |
2 | from sys import version_info
3 | 
4 | if sys.version_info >= (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI004
5 | if sys.version_info < (3, 4, 3): ...  # PYI004 
6 | if sys.version_info == (3, 4, 3): ...  # PYI004 
  |

PYI004.pyi:5:4: PYI004 Version comparison must use only major and minor version
  |
4 | if sys.version_info >= (3, 4, 3): ...  # PYI004 
5 | if sys.version_info < (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI004
6 | if sys.version_info == (3, 4, 3): ...  # PYI004 
7 | if sys.version_info != (3, 4, 3): ...  # PYI004 
  |

PYI004.pyi:6:4: PYI004 Version comparison must use only major and minor version
  |
4 | if sys.version_info >= (3, 4, 3): ...  # PYI004 
5 | if sys.version_info < (3, 4, 3): ...  # PYI004 
6 | if sys.version_info == (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI004
7 | if sys.version_info != (3, 4, 3): ...  # PYI004 
  |

PYI004.pyi:7:4: PYI004 Version comparison must use only major and minor version
  |
5 | if sys.version_info < (3, 4, 3): ...  # PYI004 
6 | if sys.version_info == (3, 4, 3): ...  # PYI004 
7 | if sys.version_info != (3, 4, 3): ...  # PYI004 
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI004
8 | 
9 | if sys.version_info[0] == 2: ...
  |


