crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI006_PYI006.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
./resources/test/fixtures/flake8_pyi/PYI006.pyi:8:4: PYI006 Use `<` or `>=` for version info comparisons
   |
 8 | if sys.version_info >= (3, 9): ...  # OK
 9 | 
10 | if sys.version_info == (3, 9): ...  # OK
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
11 | 
12 | if sys.version_info == (3, 9): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |

./resources/test/fixtures/flake8_pyi/PYI006.pyi:10:4: PYI006 Use `<` or `>=` for version info comparisons
   |
10 | if sys.version_info == (3, 9): ...  # OK
11 | 
12 | if sys.version_info == (3, 9): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
13 | 
14 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |

./resources/test/fixtures/flake8_pyi/PYI006.pyi:12:4: PYI006 Use `<` or `>=` for version info comparisons
   |
12 | if sys.version_info == (3, 9): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
13 | 
14 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
15 | 
16 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |

./resources/test/fixtures/flake8_pyi/PYI006.pyi:14:4: PYI006 Use `<` or `>=` for version info comparisons
   |
14 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
15 | 
16 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
17 | 
18 | if sys.version_info > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |

./resources/test/fixtures/flake8_pyi/PYI006.pyi:16:4: PYI006 Use `<` or `>=` for version info comparisons
   |
16 | if sys.version_info <= (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
17 | 
18 | if sys.version_info > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
19 | 
20 | if python_version > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |

./resources/test/fixtures/flake8_pyi/PYI006.pyi:18:4: PYI006 Use `<` or `>=` for version info comparisons
   |
18 | if sys.version_info > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
19 | 
20 | if python_version > (3, 10): ...  # Error: PYI006 Use only `<` and `>=` for version info comparisons
   |    ^^^^^^^^^^^^^^^^^^^^^^^^ PYI006
   |


