crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI007_PYI007.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- kind:
    name: UnrecognizedPlatformCheck
    body: "Unrecognized `sys.platform` check"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 3
  end_location:
    row: 7
    column: 28
  fix: ~
  parent: ~
- kind:
    name: UnrecognizedPlatformCheck
    body: "Unrecognized `sys.platform` check"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 3
  end_location:
    row: 9
    column: 19
  fix: ~
  parent: ~
- kind:
    name: UnrecognizedPlatformCheck
    body: "Unrecognized `sys.platform` check"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 3
  end_location:
    row: 11
    column: 24
  fix: ~
  parent: ~

