crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI008_PYI008.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- kind:
    UnrecognizedPlatformValue:
      platform: linus
  location:
    row: 3
    column: 19
  end_location:
    row: 3
    column: 26
  fix: ~
  parent: ~

