crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI013_PYI013.py.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI013.py:3:5: PYI013 [*] Non-empty class body must not contain `...`
  |
1 | class OneAttributeClass:
2 |     value: int
3 |     ...
  |     ^^^ PYI013
  |
  = help: Remove unnecessary `...`

ℹ Fix
1 1 | class OneAttributeClass:
2 2 |     value: int
3   |-    ...
4 3 | 
5 4 | 
6 5 | class OneAttributeClass2:

PYI013.py:7:5: PYI013 [*] Non-empty class body must not contain `...`
  |
6 | class OneAttributeClass2:
7 |     ...
  |     ^^^ PYI013
8 |     value: int
  |
  = help: Remove unnecessary `...`

ℹ Fix
4 4 | 
5 5 | 
6 6 | class OneAttributeClass2:
7   |-    ...
8 7 |     value: int
9 8 | 
10 9 | 

PYI013.py:12:5: PYI013 [*] Non-empty class body must not contain `...`
   |
11 | class TwoEllipsesClass:
12 |     ...
   |     ^^^ PYI013
13 |     ...
   |
   = help: Remove unnecessary `...`

ℹ Fix
10 10 | 
11 11 | class TwoEllipsesClass:
12 12 |     ...
13    |-    ...
14 13 | 
15 14 | 
16 15 | class DocstringClass:

PYI013.py:13:5: PYI013 [*] Non-empty class body must not contain `...`
   |
11 | class TwoEllipsesClass:
12 |     ...
13 |     ...
   |     ^^^ PYI013
   |
   = help: Remove unnecessary `...`

ℹ Fix
10 10 | 
11 11 | class TwoEllipsesClass:
12 12 |     ...
13    |-    ...
14 13 | 
15 14 | 
16 15 | class DocstringClass:

PYI013.py:21:5: PYI013 [*] Non-empty class body must not contain `...`
   |
19 |     """
20 | 
21 |     ...
   |     ^^^ PYI013
   |
   = help: Remove unnecessary `...`

ℹ Fix
18 18 |     My body only contains an ellipsis.
19 19 |     """
20 20 | 
21    |-    ...
22 21 | 
23 22 | 
24 23 | class NonEmptyChild(Exception):

PYI013.py:26:5: PYI013 [*] Non-empty class body must not contain `...`
   |
24 | class NonEmptyChild(Exception):
25 |     value: int
26 |     ...
   |     ^^^ PYI013
   |
   = help: Remove unnecessary `...`

ℹ Fix
23 23 | 
24 24 | class NonEmptyChild(Exception):
25 25 |     value: int
26    |-    ...
27 26 | 
28 27 | 
29 28 | class NonEmptyChild2(Exception):

PYI013.py:30:5: PYI013 [*] Non-empty class body must not contain `...`
   |
29 | class NonEmptyChild2(Exception):
30 |     ...
   |     ^^^ PYI013
31 |     value: int
   |
   = help: Remove unnecessary `...`

ℹ Fix
27 27 | 
28 28 | 
29 29 | class NonEmptyChild2(Exception):
30    |-    ...
31 30 |     value: int
32 31 | 
33 32 | 

PYI013.py:36:5: PYI013 [*] Non-empty class body must not contain `...`
   |
34 | class NonEmptyWithInit:
35 |     value: int
36 |     ...
   |     ^^^ PYI013
37 | 
38 |     def __init__():
   |
   = help: Remove unnecessary `...`

ℹ Fix
33 33 | 
34 34 | class NonEmptyWithInit:
35 35 |     value: int
36    |-    ...
37 36 | 
38 37 |     def __init__():
39 38 |         pass


